--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='./resources/css/index.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='./resources/css/styles.css' rel='stylesheet'>
+    <link href='./resources/css/index.css' rel='stylesheet'>
     <script src='./resources/script/script.js' async></script>
     <title>Manolo Martin | Home</title>
 </head>
@@ -16,14 +17,14 @@
         </div>
         <ul class='navigation'>
             <a class='current' href='./index.html'><li>Home</li></a>
-            <a href='#about'><li>About</li></a>
+            <a href='./about.html'><li>About</li></a>
             <a href='#projects'><li>Projects</li></a>
             <a href='#resume'><li>Resume</li></a>
         </ul>
         <i id='dropdown' class="fa dropdown fa-bars">
             <ul id='dropdown-navigation' class='dropdown-navigation'>
                 <a class='current' href='./index.html'><li>Home</li></a>
-                <a href='#about'><li>About</li></a>
+                <a href='./about.html'><li>About</li></a>
                 <a href='#projects'><li>Projects</li></a>
                 <a href='#resume'><li>Resume</li></a>
             </ul>
