Finished about.html and about.css, updated styles.css, updated dropdown through javascript

--- a/about.html
+++ b/about.html
@@ -4,31 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <link href='./resources/css/styles.css' rel='stylesheet'>
     <link href='./resources/css/about.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='./resources/script/script.js' async></script>
     <title>Manolo Martin | About Me</title>
 </head>
 <body>
     <header>
-        <div class='logo'>
-            <span class='name'>Martin.io</span>
+        <div class='contact-me header'>
+            <ul class='contacts'>
+                <a href="https://github.com/MMartin1013"><li><i class="icon fab fa-github"></i></li></a> 
+                <a href="https://www.linkedin.com/in/mano-martin-451436212/"><li><i class="icon fab fa-linkedin"></i></li></a> 
+                <a href="your_url_here"><li><i class="icon fas fa-envelope"></i></li></a> 
+            </ul>
         </div>
         <ul class='navigation'>
             <a href='./index.html'><li>Home</li></a>
-            <a class='current' href='./about.html'><li>About</li></a>
+            <a href='./about.html'><li class='current'>About</li></a>
             <a href='#projects'><li>Projects</li></a>
             <a href='#resume'><li>Resume</li></a>
         </ul>
-        <i id='dropdown' class="fa dropdown fa-bars">
+        <i id='dropdown' class="fa dropdown fa-bars"></i>
+        <i id='x-mark' class="fas fa-times">
             <ul id='dropdown-navigation' class='dropdown-navigation'>
-                <a class='current' href='./index.html'><li>Home</li></a>
+                <a href='./index.html'><li>Home</li></a>
                 <a href='./about.html'><li>About</li></a>
                 <a href='#projects'><li>Projects</li></a>
                 <a href='#resume'><li>Resume</li></a>
             </ul>
         </i>
     </header>
+    <main>
+        <h1>About Me</h1>
+        <div class='about'>
+            <div class='who-am-i section'>
+                <h2>Who am I?</h2>
+                <p class='info'> My name is Manolo Martin and I am a junior web developer 
+                    based in Pittsburgh, Pennsylvania. I  currently am studying computer science at
+                    George Mason University in Fairfax, Virginia, and plan to pursue a career in software
+                    engineering. I study and take on projects every day in my pursuit of this goal.
+                </p>
+            </div>
+            <div class='what-i-can-do section'>
+                <h2>What can I do?</h2>
+                <p class='info'>Even though I am a junior web developer, I have experience working with HTML, CSS, JavaScript,
+                and Java! You can check out some of my projects on my <a href='./projects'>projects</a> page or check out everything I've worked 
+                    on at <a href='https://github.com/MMartin1013'>Github</a>!
+                </p>
+                <div class='skills'>
+                    <i id='html' class="fab fa-html5"></i></li>
+                    <i id='css'class="fab fa-css3-alt"></i></li>
+                    <i id='script' class="fab fa-js-square"><div id='js-letters'></div></i></li>
+                    <i id='python' class="fab fa-python"></i></li>
+                    <i id='java' class="fab fa-java"></i></li>
+                </div>
+            </div>
+            <div class='why-i-do-it section'>
+                <h2>What motivates me?</h2>
+                <p class='info'>I always had an interest in all things technology, which is why I enjoy programming and development. 
+                    Watching all of the building blocks come together to is something satisfying no matter how much I struggled to
+                    build it, and the more I build the better I'll get!
+                </p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
