Added projects, fixed mail button, changed logo

--- a/about.html
+++ b/about.html
@@ -14,15 +14,15 @@
     <header>
         <div class='contact-me header'>
             <ul class='contacts'>
-                <a href="https://github.com/MMartin1013"><li><i class="icon fab fa-github"></i></li></a> 
-                <a href="https://www.linkedin.com/in/mano-martin-451436212/"><li><i class="icon fab fa-linkedin"></i></li></a> 
-                <a href="your_url_here"><li><i class="icon fas fa-envelope"></i></li></a> 
+                <a target="_blank" href="https://github.com/MMartin1013"><li><i class="icon fab fa-github"></i></li></a> 
+                <a target="_blank" href="https://www.linkedin.com/in/mano-martin-451436212/"><li><i class="icon fab fa-linkedin"></i></li></a> 
+                <a href="mailto:martinmano38@gmail.com"><li><i class="icon fas fa-envelope"></i></li></a> 
             </ul>
         </div>
-        <ul class='navigation'>
+        <ul id='navigation' class='navigation'>
             <a href='./index.html'><li>Home</li></a>
             <a href='./about.html'><li class='current'>About</li></a>
-            <a href='#projects'><li>Projects</li></a>
+            <a href='./projects.html'><li>Projects</li></a>
             <a href='#resume'><li>Resume</li></a>
         </ul>
         <i id='dropdown' class="fa dropdown fa-bars"></i>
@@ -30,7 +30,7 @@
             <ul id='dropdown-navigation' class='dropdown-navigation'>
                 <a href='./index.html'><li>Home</li></a>
                 <a href='./about.html'><li>About</li></a>
-                <a href='#projects'><li>Projects</li></a>
+                <a href='./projects.html'><li>Projects</li></a>
                 <a href='#resume'><li>Resume</li></a>
             </ul>
         </i>
@@ -49,7 +49,7 @@
             <div class='what-i-can-do section'>
                 <h2>What can I do?</h2>
                 <p class='info'>Even though I am a junior web developer, I have experience working with HTML, CSS, JavaScript,
-                and Java! You can check out some of my projects on my <a href='./projects'>projects</a> page or check out everything I've worked 
+                and Java! You can check out some of my projects on my <a href='./projects.html'>Projects</a> page or check out everything I've worked 
                     on at <a href='https://github.com/MMartin1013'>Github</a>!
                 </p>
                 <div class='skills'>
