--- a/projects.html
+++ b/projects.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <link href='./resources/css/styles.css' rel='stylesheet'>
-    <link href='./resources/css/index.css' rel='stylesheet'>
+    <link href='./resources/css/projects.css' rel='stylesheet'>
     <script src='./resources/script/script.js' async></script>
-    <title>Manolo Martin | Home</title>
+    <title>Manolo Martin | Projects</title>
 </head>
 <body>
     <header>
-        <div class='logo'>
-            <span class='name'>Manolo Martin</span>
+        <div class='contact-me header'>
+            <ul class='contacts'>
+                <a target="_blank" href="https://github.com/MMartin1013"><li><i class="icon fab fa-github"></i></li></a> 
+                <a target="_blank" href="https://www.linkedin.com/in/mano-martin-451436212/"><li><i class="icon fab fa-linkedin"></i></li></a> 
+                <a href="mailto:martinmano38@gmail.com"><li><i class="icon fas fa-envelope"></i></li></a> 
+            </ul>
         </div>
         <ul id='navigation' class='navigation'>
-            <a href='./index.html'><li class='current'>Home</li></a>
+            <a href='./index.html'><li>Home</li></a>
             <a href='./about.html'><li>About</li></a>
-            <a href='./projects.html'><li>Projects</li></a>
+            <a href='#projects'><li class='current'>Projects</li></a>
             <a href='#resume'><li>Resume</li></a>
         </ul>
         <i id='dropdown' class="fa dropdown fa-bars"></i>
@@ -32,21 +36,8 @@
         </i>
     </header>
     <main>
-        <div class='title'>
-            <h1 class='greeting'>Hey, I'm Manolo</h1>
-            <span>Junior Web Developer based in Pittsburgh, Pennsylvania</span>
-        </div>
-        <div class='avatar-container'>
-            <img class='avatar' src="./resources/images/avatar.png" alt="Picture of Manolo's avatar">
-        </div>
-        <div class='contact-me'>
-            <h2>Contact Me</h2>
-            <ul class='contacts'>
-                <a target="_blank" href="https://github.com/MMartin1013"><li><i class="icon fab fa-github"></i></li></a> 
-                <a target="_blank" href="https://www.linkedin.com/in/mano-martin-451436212/"><li><i class="icon fab fa-linkedin"></i></li></a> 
-                <a href="mailto:martinmano38@gmail.com"><li><i class="icon fas fa-envelope"></i></li></a> 
-            </ul>
-        </div>
+        <h1>Projects</h1>
+        <p>When I get some worthwhile projects I'll put them here!</p>
     </main>
 </body>
 </html>
