Updated projects page

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,19 @@
     </header>
     <main>
         <h1>Projects</h1>
-        <p>When I get some worthwhile projects I'll put them here!</p>
+        <div class='projects'>
+            <div id='portfolio' class='project'>
+                <h2 class='project-name' >Personal Portfolio</h2>
+                <div class='project-img-container'>
+                    <img class='project-img' src="./resources/images/PorfolioDemo.png" alt="Picture Personal Portfolio">
+                </div>
+                <a class='project-link' target="_blank" href="https://github.com/MMartin1013">GitHub Link</a>
+                <p class='description'> This personal portfolio website was created as an inspiration from Codecademy, and was a 
+                    test to use the skills that I have learned so far to create a fully functioning online portfolio. This is where 
+                    I will be putting my future projects and what I will use overtime to show my improvement as a web developer.
+                </p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
