--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                 <div class='project-img-container'>
                     <img class='project-img' src="./resources/images/PorfolioDemo.png" alt="Picture Personal Portfolio">
                 </div>
-                <a class='project-link' target="_blank" href="https://github.com/MMartin1013">GitHub Link</a>
+                <a class='project-link' target="_blank" href="https://github.com/MMartin1013/Personal-Portfolio">GitHub Link</a>
                 <p class='description'> This personal portfolio website was created as an inspiration from Codecademy, and was a 
                     test to use the skills that I have learned so far to create a fully functioning online portfolio. This is where 
                     I will be putting my future projects and what I will use overtime to show my improvement as a web developer.
