--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,17 @@
                     I will be putting my future projects and what I will use overtime to show my improvement as a web developer.
                 </p>
             </div>
+            <div id='crypto-webscraper' class='project'>
+                <h2 class='project-name' >Crypto-webscraper</h2>
+                <div class='project-img-container'>
+                    <img class='project-img' src="./resources/images/WebscraperDemo.png" alt="Picture Personal Portfolio">
+                </div>
+                <a class='project-link' target="_blank" href="https://github.com/MMartin1013/Crypto-Webscraper">GitHub Link</a>
+                <p class='description'> This is a cryptocurrency webscraper I created to improve my python skills and introduce myself 
+                    to new programming concecpts like webscraping and GUIs. This project uses the BeautifulSoup library to scan 
+                    coinmarketcap.com and display the results into the GUI created by Tkinter. The results are also updated dynamically.
+                </p>
+            </div>
         </div>
     </main>
 </body>
