Updated Resume and added Maze

--- a/projects.html
+++ b/projects.html
@@ -52,12 +52,23 @@
             <div id='crypto-webscraper' class='project'>
                 <h2 class='project-name' >Crypto-webscraper</h2>
                 <div class='project-img-container'>
-                    <img class='project-img' src="./resources/images/WebscraperDemo.png" alt="Picture Personal Portfolio">
+                    <img class='project-img' src="./resources/images/WebscraperDemo.png" alt="Webscraper Demo">
                 </div>
                 <a class='project-link' target="_blank" href="https://github.com/MMartin1013/Crypto-Webscraper">GitHub Link</a>
                 <p class='description'> This is a cryptocurrency webscraper I created to improve my python skills and introduce myself 
                     to new programming concecpts like webscraping and GUIs. This project uses the BeautifulSoup library to scan 
                     coinmarketcap.com and display the results into the GUI created by Tkinter. The results are also updated dynamically.
+                </p>
+            </div>
+            <div id='maze' class='project'>
+                <h2 class='project-name' >Maze</h2>
+                <div class='project-img-container'>
+                    <img class='project-img' src="./resources/images/MazeGameDemo.png" alt="MazeGameDemo">
+                </div>
+                <a class='project-link' target="_blank" href="https://github.com/MMartin1013/Maze">GitHub Link</a>
+                <p class='description'> This is a mazegenerator I created to improve my java skills and understanding in graph theory. 
+                    It randomly generates mazes with dimensions 5x5 - 10x10 using a randomized depth search algorithm. The GUI is handled by
+                    Java swing and the project uses Maven package managing.
                 </p>
             </div>
         </div>
