--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <div class='about'>
             <div class='who-am-i section'>
                 <h2>Who am I?</h2>
-                <p class='info'> My name is Manolo Martin and I am a junior web developer 
+                <p class='info'> My name is Manolo Martin and I am a junior developer 
                     based in Pittsburgh, Pennsylvania. I  currently am studying computer science at
                     George Mason University in Fairfax, Virginia, and plan to pursue a career in software
                     engineering. I study and take on projects every day in my pursuit of this goal.
@@ -48,7 +48,7 @@
             </div>
             <div class='what-i-can-do section'>
                 <h2>What can I do?</h2>
-                <p class='info'>Even though I am a junior web developer, I have experience working with HTML, CSS, JavaScript,
+                <p class='info'>Even though I am a junior developer, I have experience working with HTML, CSS, JavaScript,
                 and Java! You can check out some of my projects on my <a href='./projects.html'>Projects</a> page or check out everything I've worked 
                     on at <a href='https://github.com/MMartin1013'>Github</a>!
                 </p>
