--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <div class='title'>
             <h1 class='greeting'>Hey, I'm Manolo</h1>
-            <span>Junior Web Developer based in Pittsburgh, Pennsylvania</span>
+            <span>Junior Developer based in Pittsburgh, Pennsylvania</span>
         </div>
         <div class='avatar-container'>
             <img class='avatar' src="./resources/images/avatar.png" alt="Picture of Manolo's avatar">
