--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                 <a class='project-link' target="_blank" href="https://github.com/MMartin1013/Personal-Portfolio">GitHub Link</a>
                 <p class='description'> This personal portfolio website was created as an inspiration from Codecademy, and was a 
                     test to use the skills that I have learned so far to create a fully functioning online portfolio. This is where 
-                    I will be putting my future projects and what I will use overtime to show my improvement as a web developer.
+                    I will be putting my future projects and what I will use overtime to show my improvement as a developer.
                 </p>
             </div>
             <div id='crypto-webscraper' class='project'>
