--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href='./index.html'><li class='current'>Home</li></a>
             <a href='./about.html'><li>About</li></a>
             <a href='./projects.html'><li>Projects</li></a>
-            <a target="_blank" href='./resources/images/Resume.pdf'><li>Resume</li></a>
+            <a target="_blank" href='./resources/images/Manolo Martin.pdf'><li>Resume</li></a>
         </ul>
         <i id='dropdown' class="fa dropdown fa-bars"></i>
         <i id='x-mark' class="fas fa-times">
@@ -27,7 +27,7 @@
                 <a href='./index.html'><li>Home</li></a>
                 <a href='./about.html'><li>About</li></a>
                 <a href='./projects.html'><li>Projects</li></a>
-                <a target="_blank" href='./resources/images/Resume.pdf'><li>Resume</li></a>
+                <a target="_blank" href='./resources/images/Manolo Martin.pdf'><li>Resume</li></a>
             </ul>
         </i>
     </header>
