--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <a href='./index.html'><li>Home</li></a>
             <a href='./about.html'><li>About</li></a>
             <a href='#projects'><li class='current'>Projects</li></a>
-            <a target="_blank" href='./resources/images/Resume.pdf'><li>Resume</li></a>
+            <a target="_blank" href='./resources/images/Manolo Martin.pdf'><li>Resume</li></a>
         </ul>
         <i id='dropdown' class="fa dropdown fa-bars"></i>
         <i id='x-mark' class="fas fa-times">
@@ -31,7 +31,7 @@
                 <a href='./index.html'><li>Home</li></a>
                 <a href='./about.html'><li>About</li></a>
                 <a href='./projects.html'><li>Projects</li></a>
-                <a target="_blank" href='./resources/images/Resume.pdf'><li>Resume</li></a>
+                <a target="_blank" href='./resources/images/Manolo Martin.pdf'><li>Resume</li></a>
             </ul>
         </i>
     </header>
